# encore

./: .RData  .Rhistory  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.prod  README.md  analysis_models.md  docker-compose.yaml  eer_diagram.mwb  encore.conf  encore.conf.dev  encore.conf.example  encore.wsgi.example  flask_config copy.py  flask_config.py.default  flask_config.py.example  mysqlclient-2.0.1-cp35-cp35m-macosx_10_6_intel.whl  requirements.txt  rundev.sh  runweb.py  savant_job_builder.py  schema.sql
3f6c33e8-3a1c-4406-9e77-42bdc032690e/: pheno.txt
a28e0dda-38cc-4f09-ba9b-840dbee6f8b6/: pheno.txt
ad92b079-fadd-4d17-bd8e-800b8bff4dd0/: pheno.txt
anno/: Makefile  make_nearest.py  nearest-gene.bed  nearest_gene.GRCh38.bed
controller/: CMakeLists.txt
dep/manifold/: LICENSE.txt  README.md
dep/manifold/include/: hpack.hpp  http_connection.hpp  http_error_category.hpp  http_frame.hpp  http_incoming_message.hpp  http_message_head.hpp  http_outgoing_message.hpp  http_request_head.hpp  http_response_head.hpp  http_server.hpp  http_v1_connection.hpp  http_v1_request_head.hpp  http_v2_response_head.hpp  socket.hpp  tcp.hpp  uniform_resource_identifier.hpp
dep/manifold/src/: http_file_transfer.cpp  http_frame.cpp  http_server.cpp  http_stream_client.cpp  http_v1_connection.cpp  http_v1_message_head.cpp  http_v1_request_head.cpp  http_v2_request_head.cpp  http_v2_response_head.cpp  tcp.cpp
dep/manifold/tests/: test.cpp
encore/: __init__.py  access_tracker.py  admin_blueprint.py  api_blueprint.py  auth.py  auth_blueprint.py  base_model.py  chunk_progress.py  db_helpers.py  epacts_job_builder.py  geno_reader.py  genotype.py  job.py  job_tracking.py  model_factory.py  notice.py  notifier.py  ped_writer.py  pheno_reader.py  phenotype.py  saige_job_builder.py  savant_job_builder.py  savant_job_builder_old.py  sign_in_handler.py  slurm_queue.py  sorted_collection.py  sql_pool.py  user.py  user_blueprint.py
encore-utils/src/: job_tracker.cpp  validate_ped.cpp  vcf_stat.cpp
encore/static/css/: d3.box.css  job_list.css  main-nav.css
encore/static/js/: dt_api_interface.js  ejs.js  file_upload.js  form_helper.js  ideogram.js  job_details.js  job_list.js  job_locuszoom.js  listblock.js  pheno_details.js  plot.js
encore/templates/: admin_counts.html  admin_geno_details.html  admin_genos.html  admin_main.html  admin_notices.html  admin_phenos.html  admin_users.html  api_token.html  checkin.html  collaborate_with.html  collaborators.html  feedback.html  geno_details.html  geno_list.html  help.html  home.html  job_details.html  job_locuszoom.html  job_share.html  layout.html  model_build.html  not_authorized_to_analyze.html  not_found.html  pheno_details.html  pheno_list.html  pheno_upload.html  sign_in.html  signin.html
encore/tests/: api_tests.py
gasp-utils/include/: job_tracker.hpp
gasp-utils/src/: job_tracker.cpp  jobstatusd.cpp  validate_ped.cpp  vcf_stat.cpp
include/: http_client.hpp  http_file_transfer.hpp  http_message.hpp  http_router.hpp  http_stream_client.hpp  http_v1_message_head.hpp  http_v1_response_head.hpp  http_v2_connection.hpp  http_v2_message_head.hpp  http_v2_request_head.hpp
plot-epacts-output/: createSQliteDb.py  extreme_collection.py  make_QQ_json.py  make_condeqtl_json.py  make_eqtl_json.py  make_manattan_json.py  make_manhattan_json.py  make_qq_json.py  make_top_hits_json.py
rscripts/: saige.v29.4.4.Makefile  step1_fitNULLGLMM_v29.R  step2_SPATests_savvy_v24.R
scripts/: db_backup.sh  import1000G.Makefile  setup_script.py
scripts/saige/: saige.v35.8.8.Makefile  step1_fitNULLGLMM_v35.R
scripts/savant/: Snakefile
src/: hpack.cpp  http_client.cpp  http_error_category.cpp  http_incoming_message.cpp  http_message.cpp  http_message_head.cpp  http_outgoing_message.cpp  http_request_head.cpp  http_response_head.cpp  http_router.cpp  http_v1_response_head.cpp  http_v2_connection.cpp  http_v2_message_head.cpp  socket.cpp  uniform_resource_identifier.cpp
tests/certs/: commands.txt
web/: __init__.py  admin_blueprint.py  admin_handlers.py  api_blueprint.py  auth.py  base_model.py  chunk_progress.py  epacts_job_builder.py  geno_reader.py  genotype.py  job.py  job_handlers.py  job_tracking.py  model_factory.py  ped_upload.py  ped_writer.py  pheno.py  pheno_handlers.py  pheno_reader.py  phenotype.py  routing.py  saige_job_builder.py  sign_in_handler.py  slurm_epacts_job.py  slurm_queue.py  sql_pool.py  user.py  user_blueprint.py  variant not found
web/static/: dashboard.js  main.css
web/static/css/: file_upload.css  job_details.css  job_list.css  main.css
web/static/js/: d3.box.js  dashboard.js  file_upload.js  ideogram.js  job_details.js  job_list.js  job_locuszoom.js  listblock.js  pheno_details.js  plot.js
web/templates/: admin_main.html  admin_phenos.html  admin_users.html  dashboard.html  home.html  job_details.html  job_list.html  job_locuszoom.html  job_share.html  job_variant.html  layout.html  model_build.html  pheno_details.html  pheno_list.html  pheno_upload.html  sign_in.html
